@@ -1,3 +1,8 @@
+4.x.xx
+======
+- Make the Xrandr dependency optional. If Xrandr is disabled, the
+  display plugin won't be compiled at all (bug #4836).
+
 4.5.99.1 (Xfce 4.6rc1)
 ======================
 - Properly handle missing RandR extension in xfce4-settings-helper
